--- a/src/sass/partials/_searchWindow.scss
+++ b/src/sass/partials/_searchWindow.scss
@@ -9,7 +9,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .search-content {
@@ -37,9 +36,7 @@
             font-size: 2.1em;
             text-shadow: 0 0 10px $icon-color-meals;
         }
-
     }
-
     box-shadow: 0 0 2em $font-color-product;
 }
 
@@ -48,15 +45,24 @@ form {
     width: 100%;
 }
 
+input[type=number],
 input[type=text] {
     padding: 0.5em;
     border: 1px solid $font-color-meals;
     outline: 0;
     border-radius: 5px;
-    width: 80%;
+
     &:focus {
         box-shadow: 0 0 1em $font-color-meals;
     }
+}
+
+input[type=text] {
+    width: 60%;
+}
+
+input[type=number] {
+    width: 20%;
 }
 
 input[type=submit] {
@@ -66,7 +72,9 @@ input[type=submit] {
     outline: 0;
     border-radius: 5px;
     width: 20%;
-    &:hover, &:active {
+
+    &:active,
+    &:hover {
         cursor: pointer;
         background-color: $btn-color-hover;
     }
@@ -79,10 +87,11 @@ input[type=submit] {
             th:nth-of-type(#{$i}) {
                 visibility: hidden;
             }
-
         }
+
         td {
             font-size: 1rem;
+
             &:first-child {
                 width: 50%;
                 font-size: 1rem;
@@ -95,9 +104,7 @@ input[type=submit] {
         }
     }
 }
-
 @media (min-width: 720px) {
-
     .search-content {
         width: 60%;
         border-radius: 10px;
@@ -110,9 +117,7 @@ input[type=submit] {
             &:hover {
                 font-size: 5.1em;
             }
-
         }
-
     }
 
     form {
@@ -121,8 +126,7 @@ input[type=submit] {
         width: 100%;
     }
 
-    input[type=submit],
-    input[type=text] {
+    input {
         font-size: 1.2em;
         padding: 1em;
     }
@@ -130,8 +134,6 @@ input[type=submit] {
     .search-results {
         table {
             border-collapse: collapse;
-
-
             @for $i from 1 to 6 {
                 td:nth-of-type(#{$i}),
                 th:nth-of-type(#{$i}) {
@@ -139,9 +141,10 @@ input[type=submit] {
                     border: 1px solid $icon-color-meals;
                     visibility: visible;
                 }
+
                 td:nth-of-type(#{$i}):hover {
-                        cursor: pointer;
-                        font-size: 3em;
+                    cursor: pointer;
+                    font-size: 3em;
                 }
             }
 
@@ -150,5 +153,4 @@ input[type=submit] {
             }
         }
     }
-
 }
