--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background: url(../images/footer3.jpg) no-repeat center/cover fixed;
+    background: url("../images/footer3.jpg") no-repeat center/cover fixed;
 
     .footer-opacity {
         border-top: 50px solid $bg-color-section;
@@ -16,20 +16,26 @@
             flex: 1;
             font-size: 1em;
         }
+
         ul {
             flex: 1;
-            padding: 0px;
-            margin: 0px;
+            padding: 0;
+            margin: 0;
             list-style-type: none;
+
             li {
                 text-align: right;
                 padding: 0.2em;
             }
-            a:link, a:visited {
+
+            a:link,
+            a:visited {
                 color: rgba(213, 213, 213, 0.9);
                 text-decoration: none;
             }
-            a:hover, a:active {
+
+            a:active,
+            a:hover {
                 color: $icon-color-meals;
             }
         }
@@ -39,13 +45,11 @@
         margin: 0 auto;
     }
 }
-
 @media (min-width: 720px) {
-
     .footer {
         font-family: $font-family-title-section;
         height: 500px;
-        background: url(../images/footer3.jpg) no-repeat center/cover fixed;
+        background: url("../images/footer3.jpg") no-repeat center/cover fixed;
 
         .footer-opacity {
             border-top: 100px solid $bg-color-section;
@@ -62,9 +66,9 @@
                 flex: 1;
                 font-size: 3em;
             }
+
             ul {
                 font-size: 1.5em;
-
             }
             color: $font-color-section;
             padding: 2em;
@@ -72,5 +76,4 @@
             margin: 0 auto;
         }
     }
-
 }
