Validation and bugFixed

--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -4,6 +4,7 @@ $font-color-section: rgba(0, 0, 0, 0.7);
 $font-color-meals: rgba(34, 176, 195, 0.7);
 $font-color-ingested: rgb(200, 200, 200);
 $font-color-product: rgb(139, 139, 139);
+$font-color-error: rgb(214, 0, 0);
 
 $bg-color-section: rgba(224, 224, 224, 0.74);
 $bg-color-section2: linear-gradient(to right, rgba(255, 255, 255, 0.9) , rgba(222, 222, 222, 0.9));
@@ -12,6 +13,8 @@ $bg-color-meals: rgba(238, 238, 238, 0.4);
 $btn-color-hover: rgba(34, 176, 195, 0.9);
 $icon-color-meals: rgb(224, 66, 17);
 $icon-color-toggle: rgba(34, 176, 195, 0.7);
+
+
 
 
 //Fonty
