--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -213,7 +213,7 @@
         border: none;
         font-size: 0.8rem;
         color: #8b8b8b; }
-    .products table tr:last-child > td:active, .products table tr:last-child > td:hover {
+    .products table .summary:active, .products table .summary:hover {
       cursor: default; }
     .products table .summary td {
       font-size: 1rem;
@@ -260,6 +260,7 @@
 
 .search-content {
   position: relative;
+  z-index: 10;
   padding: 1em;
   margin: 0 auto;
   width: 80%;
@@ -313,26 +314,26 @@ input[type=submit] {
     cursor: pointer;
     background-color: rgba(34, 176, 195, 0.9); }
 
-.search-results table td:nth-of-type(3),
-.search-results table th:nth-of-type(3) {
-  visibility: hidden; }
-
-.search-results table td:nth-of-type(4),
-.search-results table th:nth-of-type(4) {
-  visibility: hidden; }
-
-.search-results table td:nth-of-type(5),
-.search-results table th:nth-of-type(5) {
-  visibility: hidden; }
-
-.search-results table td {
+.search-results table td:first-child {
+  width: 50%;
   font-size: 1rem; }
-  .search-results table td:first-child {
-    width: 50%;
-    font-size: 1rem; }
-    .search-results table td:first-child:hover {
-      cursor: pointer;
-      font-size: 1em; }
+  .search-results table td:first-child:hover {
+    cursor: pointer;
+    font-size: 1.2em; }
+
+.search-error {
+  position: absolute;
+  left: 10%;
+  top: 5px;
+  right: 10%;
+  z-index: 20;
+  border-radius: 1em; }
+  .search-error h1 {
+    color: #d60000;
+    background-color: rgba(255, 255, 255, 0);
+    padding: 0;
+    font-size: 0.6em;
+    text-align: center; }
 
 @media (min-width: 720px) {
   .search-content {
@@ -351,50 +352,16 @@ input[type=submit] {
   input {
     font-size: 1.2em;
     padding: 1em; }
-  .search-results table {
-    border-collapse: collapse; }
-    .search-results table td:nth-of-type(1),
-    .search-results table th:nth-of-type(1) {
-      font-size: 2em;
-      border: 1px solid #e04211;
-      visibility: visible; }
-    .search-results table td:nth-of-type(1):hover {
-      cursor: pointer;
-      font-size: 3em; }
-    .search-results table td:nth-of-type(2),
-    .search-results table th:nth-of-type(2) {
-      font-size: 2em;
-      border: 1px solid #e04211;
-      visibility: visible; }
-    .search-results table td:nth-of-type(2):hover {
-      cursor: pointer;
-      font-size: 3em; }
-    .search-results table td:nth-of-type(3),
-    .search-results table th:nth-of-type(3) {
-      font-size: 2em;
-      border: 1px solid #e04211;
-      visibility: visible; }
-    .search-results table td:nth-of-type(3):hover {
-      cursor: pointer;
-      font-size: 3em; }
-    .search-results table td:nth-of-type(4),
-    .search-results table th:nth-of-type(4) {
-      font-size: 2em;
-      border: 1px solid #e04211;
-      visibility: visible; }
-    .search-results table td:nth-of-type(4):hover {
-      cursor: pointer;
-      font-size: 3em; }
-    .search-results table td:nth-of-type(5),
-    .search-results table th:nth-of-type(5) {
-      font-size: 2em;
-      border: 1px solid #e04211;
-      visibility: visible; }
-    .search-results table td:nth-of-type(5):hover {
-      cursor: pointer;
-      font-size: 3em; }
-    .search-results table th {
-      border: none; } }
+  .search-results table td,
+  .search-results table th {
+    font-size: 2em; }
+  .search-results table td:first-child {
+    font-size: 2em; }
+  .search-results table td:first-child:hover {
+    cursor: pointer;
+    font-size: 3em; }
+  .search-error h1 {
+    font-size: 1.5em; } }
 
 .counterMain {
   text-align: center;
