--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -160,13 +160,12 @@
       .meal:focus > div:last-child > i, .meal:hover > div:last-child > i {
         font-size: 6em; } }
 
-.slidedown,
-.slideup {
+.slider {
   margin: 0 auto;
   max-width: 1000px;
-  height: 0;
   overflow-y: hidden;
-  transition: height 0.5s ease-in-out; }
+  transition: max-height .7s ease-in-out;
+  height: auto; }
 
 .products {
   height: 100%;
@@ -243,7 +242,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 1000;
   background-color: rgba(0, 0, 0, 0.6);
   display: flex;
   justify-content: center;
@@ -305,11 +304,24 @@ input[type=submit] {
     cursor: pointer;
     background-color: rgba(34, 176, 195, 0.9); }
 
-.search-results table td:first-child {
-  font-size: 0.8rem; }
-  .search-results table td:first-child:hover {
-    cursor: pointer;
-    font-size: 1.2em; }
+.search-results table {
+  width: 100%; }
+  .search-results table th {
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 0.5em; }
+  .search-results table td {
+    font-size: 0.8rem;
+    padding: 0.5em;
+    text-align: center;
+    width: auto;
+    color: #8b8b8b; }
+    .search-results table td:first-child {
+      font-size: 0.8rem;
+      color: rgba(34, 176, 195, 0.7);
+      cursor: pointer; }
+      .search-results table td:first-child:hover,
+      .search-results table td:first-child:hover ~ td {
+        color: #e04211; }
 
 .search-error {
   position: absolute;
