--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -1,10 +1,9 @@
-.slidedown,
-.slideup {
+.slider {
     margin: 0 auto;
     max-width: 1000px;
-    height: 0;
     overflow-y: hidden;
-    transition: height 0.5s ease-in-out;
+    transition: max-height .7s ease-in-out;
+    height: auto;
 }
 
 .products {
