--- a/src/sass/partials/_searchWindow.scss
+++ b/src/sass/partials/_searchWindow.scss
@@ -4,7 +4,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 1000;
     background-color: rgba(0, 0, 0, 0.6);
     display: flex;
     justify-content: center;
@@ -83,13 +83,26 @@ input[type=submit] {
 
 .search-results {
     table {
+        width: 100%;
+        th {
+            color: $font-color-section;
+            font-size: 0.5em;
+        }
         td {
+            font-size: 0.8rem;
+            padding: 0.5em;
+            text-align: center;
+            width: auto;
+            color: $font-color-product;
+
             &:first-child {
                 font-size: 0.8rem;
+                color: $icon-color-toggle;
+                cursor: pointer;
 
-                &:hover {
-                    cursor: pointer;
-                    font-size: 1.2em;
+                &:hover,
+                &:hover ~ td {
+                    color: $icon-color-meals;
                 }
             }
         }
@@ -112,7 +125,6 @@ input[type=submit] {
         text-align: center;
     }
 }
-
 @media (min-width: 720px) {
     .search-content {
         width: 60%;
@@ -155,7 +167,6 @@ input[type=submit] {
                 font-size: 1.1em;
             }
         }
-
     }
 
     .search-error {
@@ -164,7 +175,6 @@ input[type=submit] {
         }
     }
 }
-
 @media (min-width: 1024px) {
     .search-results {
         table {
@@ -181,6 +191,5 @@ input[type=submit] {
                 font-size: 1.6em;
             }
         }
-
     }
 }
